<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/select_picker"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.1"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_photo_camera_24"
        android:drawablePadding="16dp"
        android:padding="8dp"
        android:text="@string/camera"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.1"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/textViewGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_photo_album_24"
        android:drawablePadding="16dp"
        android:padding="8dp"
        android:text="@string/gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>