<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/plan_and_record_your_todo_on_your_phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@id/textViewPlan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="@id/fullNameContainer"
        app:layout_constraintStart_toStartOf="@id/fullNameContainer"
        app:layout_constraintTop_toBottomOf="@id/fullNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/UserNameContainer"
        app:layout_constraintStart_toStartOf="@id/UserNameContainer"
        app:layout_constraintTop_toBottomOf="@id/UserNameContainer" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:src="@drawable/ic_note_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>